--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.suffix= .html
 spring.mvc.static-path-pattern=/resources/**
 
+#Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/bakfiets?createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=bincks
+spring.datasource.password=securep@wd
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
