--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.suffix= .html
 spring.mvc.static-path-pattern=/resources/**
 
+java.runtime.version=15
+maven.version=3.6.2
+
 
 #Postgres
 
