--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.thymeleaf.cache=false  
 spring.thymeleaf.suffix= .html
 spring.mvc.static-path-pattern=/resources/**
+spring.web.resources.static-locations=classpath:/images/
 
 java.runtime.version=15
 maven.version=3.6.2
